--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,26 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,jsx,tsx"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "npm-watch"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "npm-watch": "0.13.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "socket.io-client": "4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
