--- a/backend/.env-example
+++ b/backend/.env-example
@@ -4,4 +4,4 @@
 hostname=YOUR_SERVER_IP_OR_DOMAIN
 username=YOUR_SSH_USERNAME
 password=YOUR_SSH_PASSWORD
-port=22 # Or your custom SSH port (e.g., 2222)
+port=1234
