--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,6 @@ services:
       - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/sqlc/schema.sql:/docker-entrypoint-initdb.d/schema.sql
 volumes:
   postgres_data:
