--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,14 @@
     "watch": "npm-watch"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
+    "axios": "^1.9.0",
     "npm-watch": "0.13.0",
+    "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "socket.io-client": "4.8.1"
+    "socket.io-client": "4.8.1",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
